--- a/src/scss/setup/_variables.scss
+++ b/src/scss/setup/_variables.scss
@@ -33,6 +33,8 @@ $sm-color-classnames: ();
 
 // LAYOUT
 $theme-spacing-unit: 1rem;
+$theme-spacing-unit-value: 16;
+$theme-spacing-mobile-unit-value: 10;
 
 $theme-spacing-modifiers: (
     micro: 1/4,
